change the structure of repo

--- a/NC5_emails.ipynb
+++ b/NC5_emails.ipynb
@@ -85,9 +85,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 2,
       "source": [
-        "emails = np.genfromtxt('emails.csv', delimiter=',')"
+        "emails = np.genfromtxt('data/emails.csv', delimiter=',')"
       ],
       "outputs": [],
       "metadata": {
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 3,
       "source": [
         "emails"
       ],
@@ -114,10 +114,8 @@
               "       [ 1.,  4., 15., ...,  5.,  3.,  0.]])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 29
+          "metadata": {},
+          "execution_count": 3
         }
       ],
       "metadata": {
@@ -148,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 4,
       "source": [
         "similarity = (emails + emails.T)\n",
         "similarity"
@@ -167,10 +165,8 @@
               "       [ 3., 12., 31., ..., 10.,  9.,  0.]])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 30
+          "metadata": {},
+          "execution_count": 4
         }
       ],
       "metadata": {
@@ -192,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 5,
       "source": [
         "spectral = SpectralClustering(n_clusters=4, affinity='precomputed')\n",
         "spectral.fit(similarity)"
@@ -202,16 +198,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "SpectralClustering(affinity='precomputed', assign_labels='kmeans', coef0=1,\n",
-              "                   degree=3, eigen_solver=None, eigen_tol=0.0, gamma=1.0,\n",
-              "                   kernel_params=None, n_clusters=4, n_components=None,\n",
-              "                   n_init=10, n_jobs=None, n_neighbors=10, random_state=None)"
+              "SpectralClustering(affinity='precomputed', n_clusters=4)"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
+          "metadata": {},
+          "execution_count": 5
         }
       ],
       "metadata": {
@@ -224,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 6,
       "source": [
         "labels = spectral.labels_"
       ],
@@ -235,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 7,
       "source": [
         "df = pd.DataFrame(labels, columns=['Cluster'])"
       ],
@@ -246,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 8,
       "source": [
         "df"
       ],
@@ -256,17 +247,17 @@
           "data": {
             "text/plain": [
               "    Cluster\n",
-              "0         1\n",
-              "1         1\n",
-              "2         2\n",
-              "3         2\n",
-              "4         3\n",
+              "0         3\n",
+              "1         3\n",
+              "2         0\n",
+              "3         0\n",
+              "4         2\n",
               "..      ...\n",
-              "95        0\n",
-              "96        3\n",
-              "97        0\n",
-              "98        1\n",
-              "99        2\n",
+              "95        1\n",
+              "96        2\n",
+              "97        1\n",
+              "98        3\n",
+              "99        0\n",
               "\n",
               "[100 rows x 1 columns]"
             ],
@@ -295,23 +286,23 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>1</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>1</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>2</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>3</td>\n",
+              "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -319,23 +310,23 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>95</th>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>96</th>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>97</th>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>98</th>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>99</th>\n",
+              "      <th>96</th>\n",
               "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>97</th>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>98</th>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99</th>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -343,10 +334,8 @@
               "</div>"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 34
+          "metadata": {},
+          "execution_count": 8
         }
       ],
       "metadata": {
@@ -360,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 9,
       "source": [
         "df.value_counts()"
       ],
@@ -370,17 +359,15 @@
           "data": {
             "text/plain": [
               "Cluster\n",
-              "2          30\n",
               "0          30\n",
+              "1          30\n",
+              "2          20\n",
               "3          20\n",
-              "1          20\n",
               "dtype: int64"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 35
+          "metadata": {},
+          "execution_count": 9
         }
       ],
       "metadata": {
