--- a/NC4_senate.ipynb
+++ b/NC4_senate.ipynb
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -88,9 +88,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "source": [
-        "votes = pd.read_csv('senate.csv')\n",
+        "votes = pd.read_csv('data/senate.csv')\n",
         "votes.head()"
       ],
       "outputs": [
@@ -263,7 +263,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ],
       "metadata": {
@@ -277,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "source": [
         "votes.shape"
       ],
@@ -290,7 +290,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ],
       "metadata": {
